# flatsurvey

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
flatsurvey/: limits.py  scheduler.py  survey.py
flatsurvey/cache/: cache.py  externalize_pickles.py  join.py  maintenance.py
flatsurvey/jobs/: completely_cylinder_periodic.py  cylinder_periodic_direction.py  orbit_closure.py  undetermined_interval_exchange_transformation.py
flatsurvey/pipeline/: consumer.py  util.py
flatsurvey/reporting/: __init__.py  json.py  log.py  progress.py  report.py
flatsurvey/surfaces/: deformation.py  ngons.py  pickle.py
flatsurvey/ui/: progress.py
flatsurvey/worker/: dask.py  worker.py
plafrim/: create-env.sh  postprocess.sh  provision-env.sh  spawn-scheduler.sh  spawn-worker.sh  survey.sh  watch-progress.sh
unsupported/jobs/: boshernitzan_conjecture.py  cylinder_periodic_asymptotics.py
unsupported/reporting/: yaml.py
